--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 
 <footer>
-  &copy; 2025 Pro Gadget Hub | Built with ❤️ and Amazon Associates
+  &copy; 2025 Daily Amazon Finds | Built with ❤️ and team Daily Amazon Finds
 </footer>
 
 <script src="script.js"></script>
