--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 
 <div class="search-bar">
-  <input type="text" id="searchInput" placeholder="Search products...">
+  <input type="text" id="searchInput" placeholder="Search by name or code...">
 </div>
 
 <div class="container" id="featured">
@@ -29,7 +29,6 @@
 
 <footer>
   &copy; 2025 Daily Amazon Finds | Built with ❤️ and team Daily Amazon Finds
-</footer>
 
 <script src="script.js"></script>
 </body>
