--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <p class="tagline">Discover Unique, Useful & Trending Products</p>
   </header>
 
+  <section class="affiliate-disclosure">
+    <p>
+      <strong>Disclosure:</strong> As an Amazon Associate, I earn from qualifying purchases.
+      Some links on this website are affiliate links, meaning we may earn a commission at no
+      additional cost to you.
+    </p>
+  </section>
+
   <!-- 🔍 Search Bar -->
   <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search products by name or code...">
