--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/28/46/92/284692af9ce184301bbf4eb21166ad87.jpg">
+  <link rel="icon" type="image/png" href="https://github.com/buysahi/buysahi.github.io/blob/main/Black_and_White_Modern_Streetwear_Sport_Logo__2_-removebg-preview.png?raw=true">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Daily Amazon Finds</title>
