--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="https://github.com/buysahi/buysahi.github.io/blob/main/Black_and_White_Modern_Streetwear_Sport_Logo__2_-removebg-preview-2.png?raw=true">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daily Amazon Finds</title>
+  <title>BuySahi</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
 
   <!-- 🧭 Header -->
   <header>
-    <h1>Daily Amazon Finds</h1>
+    <h1>BuySahi</h1>
     <p class="tagline">Discover Unique, Useful & Trending Products</p>
   </header>
 
@@ -44,7 +44,7 @@
 
   <!-- 🦶 Footer -->
   <footer>
-    <p>&copy; 2025 Daily Amazon Finds • Crafted with ❤️ by Team DAF</p>
+    <p>&copy; 2025 BuySahi • Crafted with ❤️ by Team BS</p>
   </footer>
 
   <script src="script.js"></script>
