--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- 🧭 Header -->
-  <header>
-    <h1>BuySahi</h1>
-    <p class="tagline">Discover Unique, Useful & Trending Products</p>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="logo">🛍️ BuySahi</div>
   </header>
-
+  
   <section class="affiliate-disclosure">
     <p>
       <strong>Disclosure:</strong> As an Amazon Associate, I earn from qualifying purchases.
