--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   </video>
 
   <!-- HEADER -->
-  <header class="site-header">
-    <div class="logo">🛍️ BuySahi</div>
-  </header>
+  <div class="logo">
+  <img src="https://github.com/buysahi/buysahi.github.io/blob/main/Black_and_White_Modern_Streetwear_Sport_Logo__2_-removebg-preview-2.png?raw=true" alt="BuySahi Logo">
+  <span>BuySahi</span>
+</div>
+
   
   <section class="affiliate-disclosure">
     <p>
