--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- HEADER -->
-  <div class="logo">
-  <img src="https://github.com/buysahi/buysahi.github.io/blob/main/Black_and_White_Modern_Streetwear_Sport_Logo__2_-removebg-preview-2.png?raw=true" alt="BuySahi Logo">
-  <span>BuySahi</span>
-</div>
+  
+ <!-- 🧭 Header -->
+<header class="site-header">
+  <div class="header-content">
+    <div class="logo">
+      <img src="https://github.com/buysahi/buysahi.github.io/blob/main/Black_and_White_Modern_Streetwear_Sport_Logo__2_-removebg-preview-2.png?raw=true" alt="BuySahi Logo">
+      <span>BuySahi</span>
+    </div>
+  </div>
+</header>
+
 
   
   <section class="affiliate-disclosure">
